--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <script src="detectSpeed.js"></script>
      <script>
       detectSpeed.startSpeedCheck (
-        'www.henryqi.me',
+        'www.henryqi.me/connection-type',
         function callback(timings){
           console.log(timings)
 
