--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
   <body>
     <h1>test</h1>
 
-     <script src="detectSpeed.js"></script>
-     <script>
-      detectSpeed.startSpeedCheck (
-        'www.henryqi.me/connection-type',
-        function callback(timings){
-          console.log(timings)
-
-          alert("latency speed class: " + timings.latencySpeedClass.name)
-          alert("through put speed class: " + timings.throughPutSpeedClass.name)
-        }
-      );
-     </script>
+    <!--<script src="detectSpeed.js"></script>-->
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function() {
+        $.get("http://ip-api.com/json", function(data, status){
+          alert(data.query)
+        });
+      })
+    </script>
   </body>
 </html>
