--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
     <!--<script src="detectSpeed.js"></script>-->
 
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script>
       $(document).ready(function() {
         $.get("http://ip-api.com/json", function(data, status){
-          alert(data.query)
+          document.write(data.query)
         });
       })
-    </script>-->
+    </script>
 
-    <script type="application/javascript">
+    <!--<script type="application/javascript">
       function getIP(json) {
         document.write("My public IP address is: ", json.ip);
       }
     </script>
-    <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
+    <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>-->
   </body>
 </html>
