--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!--<script src="detectSpeed.js"></script>-->
 
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script>
       $(document).ready(function() {
         $.get("http://ip-api.com/json", function(data, status){
@@ -19,7 +19,7 @@
           document.write(data.query)
         });
       })
-    </script>
+    </script>-->
 
     <!--<script type="application/javascript">
       function getIP(json) {
@@ -27,5 +27,7 @@
       }
     </script>
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>-->
+
+    <script src="checkIP.js"></script>
   </body>
 </html>
