internal-ip npm with browserify

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </script>
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>-->
 
-    <script src="checkIP.js"></script>
+    <!--<script src="checkIP.js"></script>-->
+
+    <script src="bundle.js"></script>
+
+
   </body>
 </html>
