--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
 
     <p id="isMobile"></p>
-    
+    <br>
     <p id="ipv4"></p>
     <p id="ipv6"></p>
-    
-    <br><br>
-
+    <br>
     <p id="publicip"></p>
     <p id="isp"></p>
+    <br>
+    <p id="webRTC"></p>
 <!-- check if mobile ================================================================= -->
   <script>
     var mobilecheck = function() {
@@ -35,7 +35,7 @@
 
 
 <!-- webRTC =================================================================================== -->
-  <!--<script src="webRTC.js"></script>-->
+  <script src="webRTC.js"></script>
 
 
 <!-- check latency/throughput speed ========================================================== -->
