--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   </head>
   <body>
 
-    <p id="isMobile"></p>
+    <p id="isMobile">is mobile: </p>
     <br>
-    <p id="ipv4"></p>
-    <p id="ipv6"></p>
+    <p id="ipv4">ipv4: </p>
+    <p id="ipv6">ipv6: </p>
     <br>
-    <p id="publicip"></p>
-    <p id="isp"></p>
+    <p id="publicip">public ip:</p>
+    <p id="isp">isp: </p>
     <br>
-    <p id="webRTC"></p>
+    <p id="webRTC">private ip using webrtc: </p>
 <!-- check if mobile ================================================================= -->
   <script>
     var mobilecheck = function() {
