--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
 
 <!-- webRTC =================================================================================== -->
-  <script src="webRTC.js"></script>
+  <script src="js/webRTC.js"></script>
 
 
 <!-- check latency/throughput speed ========================================================== -->
 
-  <!--<script src="detectSpeed.js"></script>-->
+  <!--<script src="js/detectSpeed.js"></script>-->
 
 
 <!-- check ip ===================================================================== -->
@@ -98,9 +98,9 @@
   </script>
   <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>-->
 
-  <!--<script src="checkIP.js"></script>-->
+  <!--<script src="js/checkIP.js"></script>-->
 
-  <!--<script src="bundle.js"></script>-->
+  <!--<script src="js/bundle.js"></script>-->
 
 
   </body>
